@@ -1,9 +1,3 @@
 AUTOMAKE_OPTIONS = foreign
 
-if USE_INCLUDED_BOEHM
-GCDIR = libgc
-else 
-GCDIR =
-endif
-
-SUBDIRS = $(GCDIR) mono doc runtime scripts man 
+SUBDIRS = mono doc runtime scripts man 
