@@ -5,7 +5,6 @@ AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(mono, 0.10)
 AM_MAINTAINER_MODE
 
-AC_CONFIG_SUBDIRS(libgc)
 AC_CHECK_TOOL(CC, gcc, gcc)
 AC_PROG_CC
 AM_PROG_CC_STDC
@@ -78,40 +77,31 @@ AC_SUBST(GMODULE_LIBS)
 
 AC_CHECK_LIB(gc, GC_malloc, found_boehm="yes")
 gc=none
-build_own_boehm=false
 AC_ARG_WITH(gc, [  --with-gc=boehm,none],[gc=$with_gc])
-
-#
-# Remove the following 3 lines when we can ship the bundled version
-#
-if test "x$found_boehm" != "xyes"; then
-	gc=none
-fi
 
 case "x$gc" in
 	xboehm|xyes)
 		if test "x$found_boehm" != "xyes"; then
-			build_own_boehm=true
+			AC_MSG_ERROR("GC requested but libgc not found!")
 		fi
+
 		AC_DEFINE(HAVE_BOEHM_GC)
 		AC_SUBST(HAVE_BOEHM_GC)
-		if $build_own_boehm; then
-	    		AC_MSG_RESULT("   using included copy")
-			CFLAGS="$CFLAGS -I\$(top_builddir)/libgc"
-			(mkdir libgc >& /dev/null; mkdir libgc/gc >& /dev/null; 
-			cp $srcdir/libgc/include/*.h libgc/gc;
-			true)
-			LIBS="$LIBS -L`pwd`/libgc"
-		else
-			LIBS="$LIBS -lgc"
-		fi
+		LIBS="$LIBS -lgc"
 		;;
 	*)
+dnl When the JIT works with libgc, use this chunk.
+dnl		# If libgc was found, use it.  Otherwise just warn.
+dnl		if test "x$found_boehm" != "xyes"; then
+dnl			AC_MSG_WARN("Compiling mono without GC.")
+dnl		else
+dnl			AC_DEFINE(HAVE_BOEHM_GC)
+dnl			AC_SUBST(HAVE_BOEHM_GC)
+dnl			LIBS="$LIBS -lgc"
+dnl		fi
 		AC_MSG_WARN("Compiling mono without GC.")
 		;;
 esac
-
-AM_CONDITIONAL(USE_INCLUDED_BOEHM, $build_own_boehm)
 
 dnl ****************************************
 dnl *** Check if we're building on win32 ***
@@ -490,6 +480,6 @@ doc/Makefile
 
 echo "
 
-	GC:	$with_gc
+	GC:	$gc
 
 "
